@@ -49,7 +49,7 @@ module  = bat.fwunpack
 method  = searchUnpack7z
 priority = 1
 magic = 7z
-noscan   = text:xml:graphics:pdf:bz2:gzip
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 [ar]
 type    = unpack
@@ -57,7 +57,7 @@ module  = bat.fwunpack
 method  = searchUnpackAr
 priority = 2
 magic = ar
-noscan   = text:xml:graphics:pdf:bz2:gzip
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 #[arj]
 #type    = unpack
@@ -65,7 +65,7 @@ noscan   = text:xml:graphics:pdf:bz2:gzip
 #method  = searchUnpackARJ
 #priority = 1
 #magic = arj
-#noscan   = text:xml:graphics:pdf:bz2:gzip
+#noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 [base64]
 type    = unpack
@@ -87,7 +87,7 @@ module  = bat.fwunpack
 method  = searchUnpackBzip2
 priority = 1
 magic = bz2
-noscan   = text:xml:graphics:pdf:gzip
+noscan   = text:xml:graphics:pdf:gzip:lrzip
 
 [cab]
 type    = unpack
@@ -142,7 +142,7 @@ module  = bat.fwunpack
 method  = searchUnpackGzip
 priority = 1
 magic = gzip
-noscan   = text:xml:graphics:pdf:bz2
+noscan   = text:xml:graphics:pdf:bz2:lrzip
 
 #[ico]
 #type    = unpack
@@ -158,7 +158,7 @@ module  = bat.fwunpack
 method  = searchUnpackInstallShield
 priority = 1
 magic = installshield
-noscan   = text:xml:graphics:pdf:bz2:gzip
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 [iso9660]
 type    = unpack
@@ -174,7 +174,7 @@ noscan   = text:xml:graphics:pdf:compressed
 #method  = searchUnpackJavaSerialized
 #priority = 2
 #magic = java_serialized
-#noscan   = text:xml:graphics:pdf:bz2:gzip
+#noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 [jffs2]
 type    = unpack
@@ -184,13 +184,21 @@ priority = 1
 magic = jffs2_le
 noscan   = text:xml:graphics:pdf:compressed
 
+[lrzip]
+type    = unpack
+module  = bat.fwunpack
+method  = searchUnpackLRZIP
+priority = 1
+magic = lrzip
+noscan   = text:xml:graphics:pdf:bz2:gzip:lzip
+
 [lzip]
 type    = unpack
 module  = bat.fwunpack
 method  = searchUnpackLzip
 priority = 1
 magic = lzip
-noscan   = text:xml:graphics:pdf:bz2:gzip
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 [lzma]
 type    = unpack
@@ -198,7 +206,7 @@ module  = bat.fwunpack
 method  = searchUnpackLZMA
 priority = 1
 magic = lzma_alone:lzma_alone_alt
-noscan   = text:xml:graphics:pdf:bz2:gzip
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 [lzo]
 type    = unpack
@@ -206,7 +214,7 @@ module  = bat.fwunpack
 method  = searchUnpackLzo
 priority = 1
 magic = lzo
-noscan   = text:xml:graphics:pdf:bz2:gzip
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 [pdf_unpack]
 type    = unpack
@@ -230,7 +238,7 @@ module  = bat.fwunpack
 method  = searchUnpackRar
 priority = 1
 magic = rar
-noscan   = text:xml:graphics:pdf:bz2:gzip
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 [rpm]
 type    = unpack
@@ -262,7 +270,7 @@ module  = bat.fwunpack
 method  = searchUnpackTar
 priority = 3
 magic = tar1:tar2
-noscan   = text:xml:graphics:pdf:bz2:gzip
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 [ubifs]
 type    = unpack
@@ -292,7 +300,7 @@ module  = bat.fwunpack
 method  = searchUnpackXZ
 priority = 1
 magic = xz:xztrailer
-noscan   = text:xml:graphics:pdf:bz2:gzip
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 [zip]
 type    = unpack
@@ -300,7 +308,7 @@ module  = bat.fwunpack
 method  = searchUnpackZip
 priority = 1
 magic = zip
-noscan   = text:xml:graphics:pdf:bz2:gzip
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip
 
 ##################
 ### leaf scans ###
